fix: prevent overlapping elements on small screens

--- a/packages/app/src/components/AxesTabs/styles/AxesTabs.module.css
+++ b/packages/app/src/components/AxesTabs/styles/AxesTabs.module.css
@@ -3,6 +3,7 @@
     position: absolute;
     top: 136px; /* modal title + horizontal tab bar height */
     bottom: 84px; /* modal actions section height */
+    z-index: 1;
 }
 
 .content {
