--- a/packages/app/src/components/VerticalTabBar/styles/VerticalTabBar.module.css
+++ b/packages/app/src/components/VerticalTabBar/styles/VerticalTabBar.module.css
@@ -2,4 +2,5 @@
     height: 100%;
     border-right: 1px solid var(--colors-grey400);
     margin-right: var(--spacers-dp24);
+    background: var(--colors-white);
 }
